# tormb

./: CMakeLists.txt  README.md
cover/: CMakeLists.txt  README.md  cover.c  example.xml  shadowtor.config.xml
tormb/: .shadow.config.xml.swp  shadow.config.xml
tormb/nc/: CMakeLists.txt  nc.c
tormb/shadow.data/hosts/4uthority/: cached-descriptors  cached-descriptors.new  cached-extrainfo.new  cached-microdescs.new  key-pinning-journal  sr-state  v3-status-votes
tormb/shadow.data/hosts/4uthority/diff-cache/: 1003  1006  1010  1021  1024  1030  1037  1038  1040
tormb/shadow.data/hosts/4uthority/keys/: ed25519_master_id_public_key  ed25519_master_id_secret_key  ed25519_signing_cert  ed25519_signing_secret_key  secret_onion_key_ntor
tormb/shadow.data/hosts/bridge/: cached-consensus  cached-descriptors.new  cached-microdescs.new  state
tormb/shadow.data/hosts/exit1/: cached-descriptors.new  cached-microdesc-consensus  cached-microdescs.new  state
tormb/shadow.data/hosts/exit2/: cached-descriptors.new  cached-microdescs.new  state
tormb/shadow.data/hosts/hiddenserver/: cached-microdesc-consensus  state
tormb/shadow.data/hosts/relay1/: cached-consensus  cached-descriptors.new  cached-microdescs.new  state
tormb/shadow.data/hosts/relay2/: cached-descriptors.new  cached-microdescs.new  state
tormb/shadow.data/hosts/torbridgeclient/: cached-descriptors.new  cached-microdescs.new  state
tormb/shadow.data/hosts/torclient/: state
tormb/shadow.data/hosts/torhiddenclient/: state
tormb/tor_server/: CMakeLists.txt  tor_server.c
(+65 files in other folders)
